<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >



    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_car"
        android:title="@string/title_send" />

    <item
        android:id="@+id/navigation_collect"
        android:icon="@drawable/ic_boxes_car"
        android:title="@string/title_collect" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_boxes_house"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_references"
        android:icon="@drawable/ic_check_list"
        android:title="@string/title_references" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_man_box"
        android:title="@string/title_perfil" />

</menu>
