<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="15dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseJustifyDelete"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/dialog_justify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:lines="5"
        android:hint="@string/characters15"
        android:backgroundTint="@color/colorGreenSpe"
        android:gravity="start|top"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_border"
            android:text="@string/cancel"
            android:textColor="@color/colorPurpleSpe"/>
        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</LinearLayout>