<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="15dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicators"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:background="@color/colorOrangeSpe">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/state"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/averageTime"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:background="@color/colorOrangeSpe"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/onEnlistment"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/avg_enlistment"
                    android:layout_width="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:textStyle="normal" />
            </TableRow>
            <TableRow android:background="@color/colorOrangeSpe">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/onDispatch"
                    android:background="@color/colorWhite"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/avg_dispatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:background="@color/colorWhite"
                    android:textStyle="normal" />
            </TableRow>
            <TableRow android:background="@color/colorOrangeSpe">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/total"
                    android:background="@color/colorWhite"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/avg_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:background="@color/colorWhite"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</LinearLayout>