<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.references.ReferencesItemFragment">

    <EditText
        android:id="@+id/reference_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/referenceDescription"
        android:inputType="textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reference_item_bar_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/barcode"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reference_item_description" />

    <EditText
        android:id="@+id/reference_item_value"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:imeOptions="actionNext"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reference_item_bar_code" />

    <EditText
        android:id="@+id/reference_item_amount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGreenSpe"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:imeOptions="actionSend"
        android:hint="@string/unitsPackage"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reference_item_value"
        app:layout_constraintTop_toBottomOf="@+id/reference_item_bar_code" />

    <Button
        android:id="@+id/reference_item_save_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="219dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_orange"
        android:radius="16dp"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reference_item_value"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>