<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/collect_item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/collectDate"
        android:inputType="textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/collect_item_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/collectAddress"
        android:inputType="textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_date" />

    <EditText
        android:id="@+id/collect_item_amount"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/boxs"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_address" />

    <EditText
        android:id="@+id/collect_item_height"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintStart_toEndOf="@+id/collect_item_amount"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_address" />

    <EditText
        android:id="@+id/collect_item_width"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/wifth"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintStart_toEndOf="@+id/collect_item_height"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_address" />

    <EditText
        android:id="@+id/collect_item_large"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/large"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintStart_toEndOf="@+id/collect_item_width"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_address" />

    <EditText
        android:id="@+id/collect_item_weight"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorGreenSpe"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number|textPersonName"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/collect_item_large"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_address" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPurpleSpe"
        android:textColorHint="@color/colorClearPurpleSpe"
        android:lines="3"
        android:hint="@string/weight"
        android:backgroundTint="@color/colorGreenSpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collect_item_amount" />


</android.support.constraint.ConstraintLayout>